--- a/package.json
+++ b/package.json
@@ -14,28 +14,34 @@
     },
     "scripts": {
         "prepare": "husky",
-        "dev": "bun run --hot app/index.ts",
+        "dev": "bun run --hot app/index.ts --env-file .env",
         "format": "prettier --write .",
         "lint": "oxlint",
         "build": "bun build ./app/index.ts --outdir=out",
         "build:watch": "bun build ./app/index.ts --outdir=out --watch",
-        "start": "bun run app/index.ts",
-        "docker:dev": "docker compose watch",
-        "docker:build": "docker build -t lemonaid ."
+        "start": "bun run app/index.ts --env-file .env",
+        "docker:dev": "docker compose watch --env-file .env",
+        "docker:build": "docker build -t lemonaid .",
+        "database:test": "supabase test db",
+        "database:migrate:generate": "drizzle-kit generate:pg",
+        "database:migrate": "tsx database/migrate.ts"
     },
     "dependencies": {
         "@ediri/vultr": "^2.19.0",
         "@supabase/supabase-js": "^2.39.8",
+        "drizzle-orm": "^0.30.2",
         "hono": "^4.1.0",
+        "postgres": "^3.4.4",
         "winston": "^3.12.0"
     },
     "devDependencies": {
         "@types/bun": "latest",
-        "drizzle-orm": "^0.30.2",
+        "drizzle-kit": "^0.20.14",
         "husky": "^9.0.11",
         "lint-staged": "^15.2.2",
         "oxlint": "^0.2.14",
         "prettier": "3.2.5",
+        "tsx": "^4.7.1",
         "zod": "^3.22.4"
     },
     "prettier": {
