--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,14 +4,15 @@
         "jsx": "react-jsx",
         "jsxImportSource": "hono/jsx",
         "outDir": "bin",
-        "target": "ES6",
-        "module": "ES6",
+        "target": "ESNext",
+        "module": "ESNext",
         "moduleResolution": "node",
         "sourceMap": true,
         "experimentalDecorators": true,
         "pretty": true,
         "noFallthroughCasesInSwitch": true,
         "noImplicitReturns": true,
-        "forceConsistentCasingInFileNames": true
+        "forceConsistentCasingInFileNames": true,
+        "allowSyntheticDefaultImports": true
     }
 }
